updated at: 2020-01-31 03:31, VRChatアバター想定3Dモデル「太田黒-Otaguro-」 - 梅干大好きっ子クラブ - BOOTH

--- a/VRChat/27/1354727.html
+++ b/VRChat/27/1354727.html
@@ -6,7 +6,7 @@
       VRChatアバター想定3Dモデル「太田黒-Otaguro-」 - 梅干大好きっ子クラブ - BOOTH
     </title>
     <meta name="description" content=
-    "■最新モデル：Otaguro_30ko(Misoko)_1.0.1 ■VRChatアバター想定3Dモデル「太田黒-Otaguro-」です。 概要・利用規約は以下のリンクからご確認下さい。 ■This is a 3D model &quot;太田黒-Otaguro-&quot; that assumes a avatar of VRChat. Please check the outline and guidelines from the link below. ■这是一个3D模型“太田黒-Otaguro-”，假设VRChat的化身。 请从以下链接查看大纲和指南。 ■LINK">
+    "VRChatアバター想定3Dモデル「太田黒-Otaguro-」です。 ※最新バージョン：Otaguro_30ko(Misoko)_1.0.1 --------------- 【内容物】 ・FBXファイル（素体付きUnity Package） ・テクスチャ編集用psdファイル×5 ・改変用Blendファイル×1 ※このモデルの髪のパーツには一部VRoid Studioで制作したものが含まれています。 --------------- 【ファイルの仕様】 ・バージョン : 1.0.1 ・データ形式 : fbx ・ポリゴン数 : 19,525（素体無し） ・ボーン : あり（Humanoid Rig">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1354727">
@@ -15,14 +15,14 @@
     <meta name="twitter:title" content=
     "VRChatアバター想定3Dモデル「太田黒-Otaguro-」 - 梅干大好きっ子クラブ - BOOTH">
     <meta name="twitter:description" content=
-    "■最新モデル：Otaguro_30ko(Misoko)_1.0.1 ■VRChatアバター想定3Dモデル「太田黒-Otaguro-」です。 概要・利用規約は以下のリンクからご確認下さい。 ■This is a 3D model &quot;太田黒-Otaguro-&quot; that assumes a avatar of VRChat. Please check the outline and guidelines from the link below. ■这是一个3D模型“太田黒-Otaguro-”，假设VRChat的化身。 请从以下链接查看大纲和指南。 ■LINK">
+    "VRChatアバター想定3Dモデル「太田黒-Otaguro-」です。 ※最新バージョン：Otaguro_30ko(Misoko)_1.0.1 --------------- 【内容物】 ・FBXファイル（素体付きUnity Package） ・テクスチャ編集用psdファイル×5 ・改変用Blendファイル×1 ※このモデルの髪のパーツには一部VRoid Studioで制作したものが含まれています。 --------------- 【ファイルの仕様】 ・バージョン : 1.0.1 ・データ形式 : fbx ・ポリゴン数 : 19,525（素体無し） ・ボーン : あり（Humanoid Rig">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/af1e37f4-64de-41e0-83b3-ea6ffc69265d/i/1354727/d3a98e86-4818-4a38-a1cf-f66425ec3aea_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "VRChatアバター想定3Dモデル「太田黒-Otaguro-」 - 梅干大好きっ子クラブ - BOOTH">
     <meta property="og:description" content=
-    "■最新モデル：Otaguro_30ko(Misoko)_1.0.1 ■VRChatアバター想定3Dモデル「太田黒-Otaguro-」です。 概要・利用規約は以下のリンクからご確認下さい。 ■This is a 3D model &quot;太田黒-Otaguro-&quot; that assumes a avatar of VRChat. Please check the outline and guidelines from the link below. ■这是一个3D模型“太田黒-Otaguro-”，假设VRChat的化身。 请从以下链接查看大纲和指南。 ■LINK">
+    "VRChatアバター想定3Dモデル「太田黒-Otaguro-」です。 ※最新バージョン：Otaguro_30ko(Misoko)_1.0.1 --------------- 【内容物】 ・FBXファイル（素体付きUnity Package） ・テクスチャ編集用psdファイル×5 ・改変用Blendファイル×1 ※このモデルの髪のパーツには一部VRoid Studioで制作したものが含まれています。 --------------- 【ファイルの仕様】 ・バージョン : 1.0.1 ・データ形式 : fbx ・ポリゴン数 : 19,525（素体無し） ・ボーン : あり（Humanoid Rig">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/af1e37f4-64de-41e0-83b3-ea6ffc69265d/i/1354727/d3a98e86-4818-4a38-a1cf-f66425ec3aea_base_resized.jpg">
     <meta property="og:url" content=
@@ -387,15 +387,35 @@
                         <div class=
                         "js-market-item-detail-description">
                           <p class="autolink u-text-wrap">
-                            ■最新モデル：Otaguro_30ko(Misoko)_1.0.1
-                            ■VRChatアバター想定3Dモデル「太田黒-Otaguro-」です。
-                            概要・利用規約は以下のリンクからご確認下さい。 ■This is a 3D
-                            model "太田黒-Otaguro-" that assumes a
-                            avatar of VRChat. Please check the
-                            outline and guidelines from the link
-                            below.
+                            VRChatアバター想定3Dモデル「太田黒-Otaguro-」です。
+                            ※最新バージョン：Otaguro_30ko(Misoko)_1.0.1
+                            --------------- 【内容物】
+                            ・FBXファイル（素体付きUnity Package）
+                            ・テクスチャ編集用psdファイル×5 ・改変用Blendファイル×1
+                            ※このモデルの髪のパーツには一部VRoid
+                            Studioで制作したものが含まれています。 ---------------
+                            【ファイルの仕様】 ・バージョン : 1.0.1 ・データ形式 : fbx
+                            ・ポリゴン数 : 19,525（素体無し） ・ボーン :
+                            あり（Humanoid Rig 設定済） ・ブレンドシェイプ : あり
+                            ・テクスチャ形式 : png ・テクスチャサイズ : 最大2048px
+                            ・テクスチャ枚数 : 5枚 ・マテリアル数 : 5
+                            --------------- 【導入方法】 ・VRCSDKの最新版
+                            ・UTS2(2.0.7で動作確認済) ・Dynamic
+                            Bone（髪の毛を揺らしたい場合）
+                            以上3つをUnityにインポートし、モデルのUnityPackageをインポートして下さい。
+                            不必要なパーツは非表示または削除でご使用下さい。
+                            参考生記事「BOOTHで購入したモデルをVRChatに入れてみた！！」
+                            https://keiki002.com/vr/booth-vrchat/
+                            ---------------
+                            ■概要・利用規約は以下のリンクからご確認下さい。
+                            https://docs.google.com/document/d/1IYDthPaDov4eRX2hsK8imauIkuZi4Lif97pNosQjN5s/edit?usp=sharing
+                            ■This is a 3D model "太田黒-Otaguro-" that
+                            assumes a avatar of VRChat. Please
+                            check the outline and guidelines from
+                            the link below.
+                            https://docs.google.com/document/d/1IYDthPaDov4eRX2hsK8imauIkuZi4Lif97pNosQjN5s/edit?usp=sharing
                             ■这是一个3D模型“太田黒-Otaguro-”，假设VRChat的化身。
-                            请从以下链接查看大纲和指南。 ■LINK
+                            请从以下链接查看大纲和指南。
                             https://docs.google.com/document/d/1IYDthPaDov4eRX2hsK8imauIkuZi4Lif97pNosQjN5s/edit?usp=sharing
                           </p>
                         </div>
