--- a/VRChat/78/1298178.html
+++ b/VRChat/78/1298178.html
@@ -6,7 +6,7 @@
       VR用メガネフレーム - らぼてん - BOOTH
     </title>
     <meta name="description" content=
-    "[2020/01/15] Oculus Quest用もDMM.makeで注文できるようになりました！ https://make.dmm.com/item/1138298/ [2019/12/27] Indexの希望者が多いのでDMM.makeで作れるようにしました。以下のリンクからご注文ください。 https://make.dmm.com/item/1137420/ おそらく現在世界で最も安く、VRゴーグルにマウント可能なメガネの作成方法を提供します。なんとそのお値段はレンズ込みで最安2000円程度(レンズはペアで1300～1600円)！ 現在、VIVE、Oculus Rift、Oculus">
+    "[2020/01/31] 全ての商品はDMM.makeにて出品しましたので、こちらをしばらくご利用ください。 https://make.dmm.com/shop/235713/ [2020/01/15] Oculus Quest用もDMM.makeで注文できるようになりました！ https://make.dmm.com/item/1138298/ [2019/12/27] Indexの希望者が多いのでDMM.makeで作れるようにしました。以下のリンクからご注文ください。 https://make.dmm.com/item/1137420/">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1298178">
@@ -14,13 +14,13 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="VR用メガネフレーム - らぼてん - BOOTH">
     <meta name="twitter:description" content=
-    "[2020/01/15] Oculus Quest用もDMM.makeで注文できるようになりました！ https://make.dmm.com/item/1138298/ [2019/12/27] Indexの希望者が多いのでDMM.makeで作れるようにしました。以下のリンクからご注文ください。 https://make.dmm.com/item/1137420/ おそらく現在世界で最も安く、VRゴーグルにマウント可能なメガネの作成方法を提供します。なんとそのお値段はレンズ込みで最安2000円程度(レンズはペアで1300～1600円)！ 現在、VIVE、Oculus Rift、Oculus">
+    "[2020/01/31] 全ての商品はDMM.makeにて出品しましたので、こちらをしばらくご利用ください。 https://make.dmm.com/shop/235713/ [2020/01/15] Oculus Quest用もDMM.makeで注文できるようになりました！ https://make.dmm.com/item/1138298/ [2019/12/27] Indexの希望者が多いのでDMM.makeで作れるようにしました。以下のリンクからご注文ください。 https://make.dmm.com/item/1137420/">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/d6025b1a-065f-421b-b27c-b58fab3f570e/i/1298178/2b0284b9-2575-4d56-9db4-78a444bf0467_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content="VR用メガネフレーム - らぼてん - BOOTH">
     <meta property="og:description" content=
-    "[2020/01/15] Oculus Quest用もDMM.makeで注文できるようになりました！ https://make.dmm.com/item/1138298/ [2019/12/27] Indexの希望者が多いのでDMM.makeで作れるようにしました。以下のリンクからご注文ください。 https://make.dmm.com/item/1137420/ おそらく現在世界で最も安く、VRゴーグルにマウント可能なメガネの作成方法を提供します。なんとそのお値段はレンズ込みで最安2000円程度(レンズはペアで1300～1600円)！ 現在、VIVE、Oculus Rift、Oculus">
+    "[2020/01/31] 全ての商品はDMM.makeにて出品しましたので、こちらをしばらくご利用ください。 https://make.dmm.com/shop/235713/ [2020/01/15] Oculus Quest用もDMM.makeで注文できるようになりました！ https://make.dmm.com/item/1138298/ [2019/12/27] Indexの希望者が多いのでDMM.makeで作れるようにしました。以下のリンクからご注文ください。 https://make.dmm.com/item/1137420/">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/d6025b1a-065f-421b-b27c-b58fab3f570e/i/1298178/2b0284b9-2575-4d56-9db4-78a444bf0467_base_resized.jpg">
     <meta property="og:url" content=
@@ -276,7 +276,7 @@
                                 "lo-grid u-align-items-center">
                                   <div class="lo-grid-cell">
                                     <div class="variation-name">
-                                      VIVE用3Dプリントを頼む
+                                      VIVE用3Dプリントを頼む(現在DMM.makeにて注文可能です)
                                     </div>
                                     <div class=
                                     "variation-caption u-text-assertive">
@@ -332,7 +332,8 @@
                                 "lo-grid u-align-items-center">
                                   <div class="lo-grid-cell">
                                     <div class="variation-name">
-                                      Oculus Rift用3Dプリントを頼む
+                                      Oculus
+                                      Rift用3Dプリントを頼む(現在DMM.makeにて注文可能です)
                                     </div>
                                     <div class=
                                     "variation-caption u-text-assertive">
@@ -388,7 +389,8 @@
                                 "lo-grid u-align-items-center">
                                   <div class="lo-grid-cell">
                                     <div class="variation-name">
-                                      Index用は売り切れたのでDMM.makeから発注ください
+                                      Valve
+                                      Index用(現在DMM.makeにて注文可能です)
                                     </div>
                                     <div class=
                                     "variation-caption u-text-assertive">
@@ -445,7 +447,7 @@
                                   <div class="lo-grid-cell">
                                     <div class="variation-name">
                                       Oculus
-                                      Quest用(DMM.makeから発注ください)
+                                      Quest用(現在DMM.makeにて注文可能です)
                                     </div>
                                     <div class=
                                     "variation-caption u-text-assertive">
@@ -715,6 +717,9 @@
                         <div class=
                         "js-market-item-detail-description">
                           <p class="autolink u-text-wrap">
+                            [2020/01/31]
+                            全ての商品はDMM.makeにて出品しましたので、こちらをしばらくご利用ください。
+                            https://make.dmm.com/shop/235713/
                             [2020/01/15] Oculus
                             Quest用もDMM.makeで注文できるようになりました！
                             https://make.dmm.com/item/1138298/
