updated at: 2020-02-01 02:49, 【VRChat】Gz.9 .556 .762　A4　オリジナル３Dモデル - Gｚ INDUSTRIES - BOOTH

--- a/VRChat/70/1376570.html
+++ b/VRChat/70/1376570.html
@@ -3,28 +3,28 @@
   <head>
     <meta charset="utf-8">
     <title>
-      【VRChat】Gz.9 .556 .762　オリジナル３Dモデル - Gｚ INDUSTRIES - BOOTH
+      【VRChat】Gz.9 .556 .762　A4　オリジナル３Dモデル - Gｚ INDUSTRIES - BOOTH
     </title>
     <meta name="description" content=
-    "VRChat向けのオリジナル3D銃です。 内容 fbxファイル unitypackage readme.txt テクスチャ テクスチャ（PSD） 内部機構のないシンプルな物になります、こだわりのある方にはおすすめできません。（今後のアップデートで作るかも） ストックはシェイプキーで伸縮調整できます。 サプレッサーはテクスチャが入っておりませんのでご了承ください。 改変、再配布について 当モデルの改変、VRChatへのアップロードは自由です。 ただし、モデルの改変の有無にかかわらず再配布できる形でのアップロードはご遠慮ください。">
+    "VRChat向けのオリジナル3D銃です。 内容 fbxファイル unitypackage readme.txt テクスチャ 各種パーツはシェイプキーで調整できます。 改変、再配布について 当モデルの改変、VRChatへのアップロードは自由です。 ただし、モデルの改変の有無にかかわらず再配布できる形でのアップロードはご遠慮ください。 改変されたモデルの著作権はGarazooに帰属し、このモデルを使用して起きた損害や問題については責任を負いません。 この規約は今後変更される可能性があります。 なにかありましたらこちらまでお願いします。 https://twitter.com/GARAZOO1">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1376570">
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "【VRChat】Gz.9 .556 .762　オリジナル３Dモデル - Gｚ INDUSTRIES - BOOTH">
+    "【VRChat】Gz.9 .556 .762　A4　オリジナル３Dモデル - Gｚ INDUSTRIES - BOOTH">
     <meta name="twitter:description" content=
-    "VRChat向けのオリジナル3D銃です。 内容 fbxファイル unitypackage readme.txt テクスチャ テクスチャ（PSD） 内部機構のないシンプルな物になります、こだわりのある方にはおすすめできません。（今後のアップデートで作るかも） ストックはシェイプキーで伸縮調整できます。 サプレッサーはテクスチャが入っておりませんのでご了承ください。 改変、再配布について 当モデルの改変、VRChatへのアップロードは自由です。 ただし、モデルの改変の有無にかかわらず再配布できる形でのアップロードはご遠慮ください。">
+    "VRChat向けのオリジナル3D銃です。 内容 fbxファイル unitypackage readme.txt テクスチャ 各種パーツはシェイプキーで調整できます。 改変、再配布について 当モデルの改変、VRChatへのアップロードは自由です。 ただし、モデルの改変の有無にかかわらず再配布できる形でのアップロードはご遠慮ください。 改変されたモデルの著作権はGarazooに帰属し、このモデルを使用して起きた損害や問題については責任を負いません。 この規約は今後変更される可能性があります。 なにかありましたらこちらまでお願いします。 https://twitter.com/GARAZOO1">
     <meta name="twitter:image" content=
-    "https://booth.pximg.net/c/620x620/32923bd1-d9f6-4458-b436-a0b083014965/i/1376570/b62fe8ec-1b3a-4020-b1f2-5bc0289c5387_base_resized.jpg">
+    "https://booth.pximg.net/c/620x620/32923bd1-d9f6-4458-b436-a0b083014965/i/1376570/2077c6ee-ab05-48e5-9ea0-2472f7c4b9d9_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "【VRChat】Gz.9 .556 .762　オリジナル３Dモデル - Gｚ INDUSTRIES - BOOTH">
+    "【VRChat】Gz.9 .556 .762　A4　オリジナル３Dモデル - Gｚ INDUSTRIES - BOOTH">
     <meta property="og:description" content=
-    "VRChat向けのオリジナル3D銃です。 内容 fbxファイル unitypackage readme.txt テクスチャ テクスチャ（PSD） 内部機構のないシンプルな物になります、こだわりのある方にはおすすめできません。（今後のアップデートで作るかも） ストックはシェイプキーで伸縮調整できます。 サプレッサーはテクスチャが入っておりませんのでご了承ください。 改変、再配布について 当モデルの改変、VRChatへのアップロードは自由です。 ただし、モデルの改変の有無にかかわらず再配布できる形でのアップロードはご遠慮ください。">
+    "VRChat向けのオリジナル3D銃です。 内容 fbxファイル unitypackage readme.txt テクスチャ 各種パーツはシェイプキーで調整できます。 改変、再配布について 当モデルの改変、VRChatへのアップロードは自由です。 ただし、モデルの改変の有無にかかわらず再配布できる形でのアップロードはご遠慮ください。 改変されたモデルの著作権はGarazooに帰属し、このモデルを使用して起きた損害や問題については責任を負いません。 この規約は今後変更される可能性があります。 なにかありましたらこちらまでお願いします。 https://twitter.com/GARAZOO1">
     <meta property="og:image" content=
-    "https://booth.pximg.net/c/620x620/32923bd1-d9f6-4458-b436-a0b083014965/i/1376570/b62fe8ec-1b3a-4020-b1f2-5bc0289c5387_base_resized.jpg">
+    "https://booth.pximg.net/c/620x620/32923bd1-d9f6-4458-b436-a0b083014965/i/1376570/2077c6ee-ab05-48e5-9ea0-2472f7c4b9d9_base_resized.jpg">
     <meta property="og:url" content=
     "https://booth.pm/ja/items/1376570">
     <meta name="skip_auto_login" content="">
@@ -131,7 +131,7 @@
                         </div>
                         <h2 class=
                         "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
-                          【VRChat】Gz.9 .556 .762　オリジナル３Dモデル
+                          【VRChat】Gz.9 .556 .762　A4　オリジナル３Dモデル
                         </h2>
                         <div class="item-summary__caption"></div>
                       </header>
@@ -224,7 +224,7 @@
                           "https://booth.pm/ja/items/1376570"
                           data-lang="ja" data-hashtags="booth_pm"
                           data-text=
-                          "【VRChat】Gz.9 .556 .762　オリジナル３Dモデル | Gｚ INDUSTRIES"
+                          "【VRChat】Gz.9 .556 .762　A4　オリジナル３Dモデル | Gｚ INDUSTRIES"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
@@ -244,30 +244,50 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "【VRChat】Gz.9 .556 .762　オリジナル３Dモデル "
+                            "【VRChat】Gz.9 .556 .762　A4　オリジナル３Dモデル "
                             class="market-item-detail-item-image"
                             src=
-                            "https://booth.pximg.net/32923bd1-d9f6-4458-b436-a0b083014965/i/1376570/b62fe8ec-1b3a-4020-b1f2-5bc0289c5387_base_resized.jpg">
+                            "https://booth.pximg.net/32923bd1-d9f6-4458-b436-a0b083014965/i/1376570/2077c6ee-ab05-48e5-9ea0-2472f7c4b9d9_base_resized.jpg">
                           </div>
                         </div>
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "【VRChat】Gz.9 .556 .762　オリジナル３Dモデル "
+                            "【VRChat】Gz.9 .556 .762　A4　オリジナル３Dモデル "
                             class="market-item-detail-item-image"
                             data-lazy=
-                            "https://booth.pximg.net/32923bd1-d9f6-4458-b436-a0b083014965/i/1376570/05b8c083-b1fd-439c-b1f0-239c57ace281_base_resized.jpg">
+                            "https://booth.pximg.net/32923bd1-d9f6-4458-b436-a0b083014965/i/1376570/c23a2199-e8dc-4c5f-892c-6e712f1ce183_base_resized.jpg">
                           </div>
                         </div>
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "【VRChat】Gz.9 .556 .762　オリジナル３Dモデル "
+                            "【VRChat】Gz.9 .556 .762　A4　オリジナル３Dモデル "
                             class="market-item-detail-item-image"
                             data-lazy=
-                            "https://booth.pximg.net/32923bd1-d9f6-4458-b436-a0b083014965/i/1376570/db8287a0-6e86-4a29-9a02-9e9578585a9a_base_resized.jpg">
+                            "https://booth.pximg.net/32923bd1-d9f6-4458-b436-a0b083014965/i/1376570/85a549e0-0e66-412d-8509-c0a563d66355_base_resized.jpg">
+                          </div>
+                        </div>
+                        <div>
+                          <div class=
+                          "market-item-detail-item-image-wrapper">
+                            <img alt=
+                            "【VRChat】Gz.9 .556 .762　A4　オリジナル３Dモデル "
+                            class="market-item-detail-item-image"
+                            data-lazy=
+                            "https://booth.pximg.net/32923bd1-d9f6-4458-b436-a0b083014965/i/1376570/0ba9aaea-6de6-440d-b92d-8b00470c009d_base_resized.jpg">
+                          </div>
+                        </div>
+                        <div>
+                          <div class=
+                          "market-item-detail-item-image-wrapper">
+                            <img alt=
+                            "【VRChat】Gz.9 .556 .762　A4　オリジナル３Dモデル "
+                            class="market-item-detail-item-image"
+                            data-lazy=
+                            "https://booth.pximg.net/32923bd1-d9f6-4458-b436-a0b083014965/i/1376570/007eea9d-e859-4e56-9063-99baf88d1985_base_resized.jpg">
                           </div>
                         </div>
                       </div>
@@ -275,15 +295,23 @@
                         <a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/32923bd1-d9f6-4458-b436-a0b083014965/i/1376570/b62fe8ec-1b3a-4020-b1f2-5bc0289c5387_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/32923bd1-d9f6-4458-b436-a0b083014965/i/1376570/2077c6ee-ab05-48e5-9ea0-2472f7c4b9d9_base_resized.jpg">
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/32923bd1-d9f6-4458-b436-a0b083014965/i/1376570/05b8c083-b1fd-439c-b1f0-239c57ace281_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/32923bd1-d9f6-4458-b436-a0b083014965/i/1376570/c23a2199-e8dc-4c5f-892c-6e712f1ce183_base_resized.jpg">
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/32923bd1-d9f6-4458-b436-a0b083014965/i/1376570/db8287a0-6e86-4a29-9a02-9e9578585a9a_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/32923bd1-d9f6-4458-b436-a0b083014965/i/1376570/85a549e0-0e66-412d-8509-c0a563d66355_base_resized.jpg">
+                        </div></a><a class="pointer">
+                        <div class="slick-thumbnail-border">
+                          <img src=
+                          "https://booth.pximg.net/c/72x72_a2_g5/32923bd1-d9f6-4458-b436-a0b083014965/i/1376570/0ba9aaea-6de6-440d-b92d-8b00470c009d_base_resized.jpg">
+                        </div></a><a class="pointer">
+                        <div class="slick-thumbnail-border">
+                          <img src=
+                          "https://booth.pximg.net/c/72x72_a2_g5/32923bd1-d9f6-4458-b436-a0b083014965/i/1376570/007eea9d-e859-4e56-9063-99baf88d1985_base_resized.jpg">
                         </div></a>
                       </div>
                       <section>
@@ -292,11 +320,8 @@
                           <p class="autolink u-text-wrap">
                             VRChat向けのオリジナル3D銃です。 内容 fbxファイル
                             unitypackage readme.txt テクスチャ
-                            テクスチャ（PSD）
-                            内部機構のないシンプルな物になります、こだわりのある方にはおすすめできません。（今後のアップデートで作るかも）
-                            ストックはシェイプキーで伸縮調整できます。
-                            サプレッサーはテクスチャが入っておりませんのでご了承ください。
-                            改変、再配布について 当モデルの改変、VRChatへのアップロードは自由です。
+                            各種パーツはシェイプキーで調整できます。 改変、再配布について
+                            当モデルの改変、VRChatへのアップロードは自由です。
                             ただし、モデルの改変の有無にかかわらず再配布できる形でのアップロードはご遠慮ください。
                             改変されたモデルの著作権はGarazooに帰属し、このモデルを使用して起きた損害や問題については責任を負いません。
                             この規約は今後変更される可能性があります。
@@ -305,6 +330,7 @@
                             2019/05/22
                             Gz556モデルにシェイプキーを追加した物をつくりました。、本体の長さ、サイドレイルの追加、など調整できるようになりました。
                             2019/05/26 Gz9モデルにシェイプキーモデルを追加
+                            2020/01/31 GzモデルをA4にアップグレードしました。
                           </p>
                         </div>
                       </section>
