updated at: 2020-02-01 15:33, VRChatアバター想定3Dモデル「太田黒-Otaguro-」 - 梅干大好きっ子クラブ - BOOTH

--- a/VRChat/27/1354727.html
+++ b/VRChat/27/1354727.html
@@ -404,7 +404,7 @@
                             Bone（髪の毛を揺らしたい場合）
                             以上3つをUnityにインポートし、モデルのUnityPackageをインポートして下さい。
                             不必要なパーツは非表示または削除でご使用下さい。
-                            参考生記事「BOOTHで購入したモデルをVRChatに入れてみた！！」
+                            参考記事「BOOTHで購入したモデルをVRChatに入れてみた！！」
                             https://keiki002.com/vr/booth-vrchat/
                             ---------------
                             ■概要・利用規約は以下のリンクからご確認下さい。
