updated at: 2020-02-01 20:26, 【3Dモデル】桔梗/KIKYOU Ver1.3 - オニガワラインダストリ - BOOTH

--- a/VRChat/86/987686.html
+++ b/VRChat/86/987686.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      ［アバター］〝桔梗-KIKYOU-〟Ver1.3 - オニガワラインダストリ - BOOTH
+      【3Dモデル】桔梗/KIKYOU Ver1.3 - オニガワラインダストリ - BOOTH
     </title>
     <meta name="description" content=
     "更新情報 [2018.08/29] Ver1.3に更新 ・Actionフォルダ内に移動用AnimationのIdleB/FrontC/BackCを追加しました。これらはデスクトップモードでも挙動が問題ないはずです。 [2018.08.28] Ver1.21に更新 ・Headphoneのウェイトミスを修正しました。 [2018.08.28] Ver1.2に更新 ・Tシャツ差分を追加しました。 ・体Materialと眼窩Materialを分離しました。同じMaterialだったので体に影をかけると同時に眼窩にも影が走ってしまいましたが、別のMaterialを割り当てられるようになりました。">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "［アバター］〝桔梗-KIKYOU-〟Ver1.3 - オニガワラインダストリ - BOOTH">
+    "【3Dモデル】桔梗/KIKYOU Ver1.3 - オニガワラインダストリ - BOOTH">
     <meta name="twitter:description" content=
     "更新情報 [2018.08/29] Ver1.3に更新 ・Actionフォルダ内に移動用AnimationのIdleB/FrontC/BackCを追加しました。これらはデスクトップモードでも挙動が問題ないはずです。 [2018.08.28] Ver1.21に更新 ・Headphoneのウェイトミスを修正しました。 [2018.08.28] Ver1.2に更新 ・Tシャツ差分を追加しました。 ・体Materialと眼窩Materialを分離しました。同じMaterialだったので体に影をかけると同時に眼窩にも影が走ってしまいましたが、別のMaterialを割り当てられるようになりました。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/ec467e09-9e3c-4fb6-8a6a-55f885c9820b/i/987686/0da341c1-a79a-4a1a-bf0a-e9b7c7caa4f7_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "［アバター］〝桔梗-KIKYOU-〟Ver1.3 - オニガワラインダストリ - BOOTH">
+    "【3Dモデル】桔梗/KIKYOU Ver1.3 - オニガワラインダストリ - BOOTH">
     <meta property="og:description" content=
     "更新情報 [2018.08/29] Ver1.3に更新 ・Actionフォルダ内に移動用AnimationのIdleB/FrontC/BackCを追加しました。これらはデスクトップモードでも挙動が問題ないはずです。 [2018.08.28] Ver1.21に更新 ・Headphoneのウェイトミスを修正しました。 [2018.08.28] Ver1.2に更新 ・Tシャツ差分を追加しました。 ・体Materialと眼窩Materialを分離しました。同じMaterialだったので体に影をかけると同時に眼窩にも影が走ってしまいましたが、別のMaterialを割り当てられるようになりました。">
     <meta property="og:image" content=
@@ -144,7 +144,7 @@
                         </div>
                         <h2 class=
                         "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
-                          ［アバター］〝桔梗-KIKYOU-〟Ver1.3
+                          【3Dモデル】桔梗/KIKYOU Ver1.3
                         </h2>
                         <div class="item-summary__caption"></div>
                       </header>
@@ -238,7 +238,7 @@
                           "https://booth.pm/ja/items/987686"
                           data-lang="ja" data-hashtags="booth_pm"
                           data-text=
-                          "［アバター］〝桔梗-KIKYOU-〟Ver1.3 | オニガワラインダストリ"
+                          "【3Dモデル】桔梗/KIKYOU Ver1.3 | オニガワラインダストリ"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
@@ -257,7 +257,7 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="［アバター］〝桔梗-KIKYOU-〟Ver1.3"
+                            <img alt="【3Dモデル】桔梗/KIKYOU Ver1.3"
                             class="market-item-detail-item-image"
                             src=
                             "https://booth.pximg.net/ec467e09-9e3c-4fb6-8a6a-55f885c9820b/i/987686/0da341c1-a79a-4a1a-bf0a-e9b7c7caa4f7_base_resized.jpg">
@@ -266,7 +266,7 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="［アバター］〝桔梗-KIKYOU-〟Ver1.3"
+                            <img alt="【3Dモデル】桔梗/KIKYOU Ver1.3"
                             class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/ec467e09-9e3c-4fb6-8a6a-55f885c9820b/i/987686/e0efab6e-6855-4e7f-8be9-cbfa5f8d9467_base_resized.jpg">
@@ -275,7 +275,7 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="［アバター］〝桔梗-KIKYOU-〟Ver1.3"
+                            <img alt="【3Dモデル】桔梗/KIKYOU Ver1.3"
                             class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/ec467e09-9e3c-4fb6-8a6a-55f885c9820b/i/987686/7b1f226a-d2bd-4a38-abcc-8b259d5ddf12_base_resized.jpg">
@@ -284,7 +284,7 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="［アバター］〝桔梗-KIKYOU-〟Ver1.3"
+                            <img alt="【3Dモデル】桔梗/KIKYOU Ver1.3"
                             class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/ec467e09-9e3c-4fb6-8a6a-55f885c9820b/i/987686/4bfc11de-f78d-486e-824f-7a7cbc536035_base_resized.jpg">
@@ -293,7 +293,7 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="［アバター］〝桔梗-KIKYOU-〟Ver1.3"
+                            <img alt="【3Dモデル】桔梗/KIKYOU Ver1.3"
                             class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/ec467e09-9e3c-4fb6-8a6a-55f885c9820b/i/987686/6fea463d-8507-4143-ac5b-040d6324daba_base_resized.jpg">
@@ -302,7 +302,7 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="［アバター］〝桔梗-KIKYOU-〟Ver1.3"
+                            <img alt="【3Dモデル】桔梗/KIKYOU Ver1.3"
                             class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/ec467e09-9e3c-4fb6-8a6a-55f885c9820b/i/987686/fed24f72-7098-4254-83a4-b9d094212265_base_resized.jpg">
@@ -311,7 +311,7 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="［アバター］〝桔梗-KIKYOU-〟Ver1.3"
+                            <img alt="【3Dモデル】桔梗/KIKYOU Ver1.3"
                             class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/ec467e09-9e3c-4fb6-8a6a-55f885c9820b/i/987686/7c083a12-faee-4e29-b708-ad9a1aa29938_base_resized.jpg">
@@ -320,7 +320,7 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="［アバター］〝桔梗-KIKYOU-〟Ver1.3"
+                            <img alt="【3Dモデル】桔梗/KIKYOU Ver1.3"
                             class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/ec467e09-9e3c-4fb6-8a6a-55f885c9820b/i/987686/8967f485-fb27-4d4f-a505-28dc7b8426cb_base_resized.jpg">
