updated at: 2020-02-01 22:41, 【3Dモデル】オニガワラ社製汎用ドローンv1.1 - オニガワラインダストリ - BOOTH

--- a/VRChat/87/1305687.html
+++ b/VRChat/87/1305687.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      オニガワラ社製汎用ドローンv1.1 - オニガワラインダストリ - BOOTH
+      【3Dモデル】オニガワラ社製汎用ドローンv1.1 - オニガワラインダストリ - BOOTH
     </title>
     <meta name="description" content=
     "［2019/04/08更新］ Prefabに不具合があった為更新しました。 また、Prefab内容を変更しました。 オニガワラ・インダストリの汎用ドローンです。 白と黒緑の２パターンが入っています。まばたきアニメ付きです。 SpringJointが入ったPrefabも付属されているので、アバターに遅れてついてこさせることが出来ます。 ※自分視点だとぴったりくっ付いて見えます。">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "オニガワラ社製汎用ドローンv1.1 - オニガワラインダストリ - BOOTH">
+    "【3Dモデル】オニガワラ社製汎用ドローンv1.1 - オニガワラインダストリ - BOOTH">
     <meta name="twitter:description" content=
     "［2019/04/08更新］ Prefabに不具合があった為更新しました。 また、Prefab内容を変更しました。 オニガワラ・インダストリの汎用ドローンです。 白と黒緑の２パターンが入っています。まばたきアニメ付きです。 SpringJointが入ったPrefabも付属されているので、アバターに遅れてついてこさせることが出来ます。 ※自分視点だとぴったりくっ付いて見えます。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/ec467e09-9e3c-4fb6-8a6a-55f885c9820b/i/1305687/1b6db110-126b-45c8-9545-229afe2176ad_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "オニガワラ社製汎用ドローンv1.1 - オニガワラインダストリ - BOOTH">
+    "【3Dモデル】オニガワラ社製汎用ドローンv1.1 - オニガワラインダストリ - BOOTH">
     <meta property="og:description" content=
     "［2019/04/08更新］ Prefabに不具合があった為更新しました。 また、Prefab内容を変更しました。 オニガワラ・インダストリの汎用ドローンです。 白と黒緑の２パターンが入っています。まばたきアニメ付きです。 SpringJointが入ったPrefabも付属されているので、アバターに遅れてついてこさせることが出来ます。 ※自分視点だとぴったりくっ付いて見えます。">
     <meta property="og:image" content=
@@ -132,7 +132,7 @@
                         </div>
                         <h2 class=
                         "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
-                          オニガワラ社製汎用ドローンv1.1
+                          【3Dモデル】オニガワラ社製汎用ドローンv1.1
                         </h2>
                         <div class="item-summary__caption"></div>
                       </header>
@@ -276,7 +276,7 @@
                           "https://booth.pm/ja/items/1305687"
                           data-lang="ja" data-hashtags="booth_pm"
                           data-text=
-                          "オニガワラ社製汎用ドローンv1.1 | オニガワラインダストリ"
+                          "【3Dモデル】オニガワラ社製汎用ドローンv1.1 | オニガワラインダストリ"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
@@ -295,16 +295,17 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="オニガワラ社製汎用ドローンv1.1" class=
-                            "market-item-detail-item-image" src=
+                            <img alt="【3Dモデル】オニガワラ社製汎用ドローンv1.1"
+                            class="market-item-detail-item-image"
+                            src=
                             "https://booth.pximg.net/ec467e09-9e3c-4fb6-8a6a-55f885c9820b/i/1305687/1b6db110-126b-45c8-9545-229afe2176ad_base_resized.jpg">
                           </div>
                         </div>
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="オニガワラ社製汎用ドローンv1.1" class=
-                            "market-item-detail-item-image"
+                            <img alt="【3Dモデル】オニガワラ社製汎用ドローンv1.1"
+                            class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/ec467e09-9e3c-4fb6-8a6a-55f885c9820b/i/1305687/a293d67b-fa1b-4860-8cf2-eef19a25f6a6_base_resized.jpg">
                           </div>
