updated at: 2020-02-01 23:09, 【VRChat向け少年アバター】やくそくヤギくん【無償版あり】 - chemical&#39;s shop - BOOTH

--- a/VRChat/00/1290000.html
+++ b/VRChat/00/1290000.html
@@ -6,7 +6,7 @@
       【VRChat向け少年アバター】やくそくヤギくん【無償版あり】 - chemical's shop - BOOTH
     </title>
     <meta name="description" content=
-    "Reprint is prohibited（他サイトへの転載はおやめください） このアバターはHimiko Avatar Worldにて試着可能です。 ※2019年3月27日更新：blenderで編集するときにシェイプキーが出なかった問題を解決しました ※2019年7月1日更新：BOOST版にquest対応・セットアップ済モデルを同梱 ※2019年7月9日更新：デスクトップモードでしゃがんだ時にズボンが突き抜ける問題を修正 VRchat用のモデルとなります。 ■BOOST用内容">
+    "Reprint is prohibited（他サイトへの転載はおやめください） このアバターはHimiko Avatar Worldにて試着可能です。 ※2019年3月27日更新：blenderで編集するときにシェイプキーが出なかった問題を解決しました ※2019年7月1日更新：BOOST版にquest対応・セットアップ済モデルを同梱 ※2019年7月9日更新：デスクトップモードでしゃがんだ時にズボンが突き抜ける問題を修正 ※2020年2月1日 フルトラッキングに対応 VRchat用のモデルとなります。 ■BOOST用内容">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1290000">
@@ -15,14 +15,14 @@
     <meta name="twitter:title" content=
     "【VRChat向け少年アバター】やくそくヤギくん【無償版あり】 - chemical's shop - BOOTH">
     <meta name="twitter:description" content=
-    "Reprint is prohibited（他サイトへの転載はおやめください） このアバターはHimiko Avatar Worldにて試着可能です。 ※2019年3月27日更新：blenderで編集するときにシェイプキーが出なかった問題を解決しました ※2019年7月1日更新：BOOST版にquest対応・セットアップ済モデルを同梱 ※2019年7月9日更新：デスクトップモードでしゃがんだ時にズボンが突き抜ける問題を修正 VRchat用のモデルとなります。 ■BOOST用内容">
+    "Reprint is prohibited（他サイトへの転載はおやめください） このアバターはHimiko Avatar Worldにて試着可能です。 ※2019年3月27日更新：blenderで編集するときにシェイプキーが出なかった問題を解決しました ※2019年7月1日更新：BOOST版にquest対応・セットアップ済モデルを同梱 ※2019年7月9日更新：デスクトップモードでしゃがんだ時にズボンが突き抜ける問題を修正 ※2020年2月1日 フルトラッキングに対応 VRchat用のモデルとなります。 ■BOOST用内容">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/9585a184-fff0-488e-8a9d-612c758951c2/i/1290000/279eed6e-d981-4d3c-9f4f-15b9865b1a00_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "【VRChat向け少年アバター】やくそくヤギくん【無償版あり】 - chemical's shop - BOOTH">
     <meta property="og:description" content=
-    "Reprint is prohibited（他サイトへの転載はおやめください） このアバターはHimiko Avatar Worldにて試着可能です。 ※2019年3月27日更新：blenderで編集するときにシェイプキーが出なかった問題を解決しました ※2019年7月1日更新：BOOST版にquest対応・セットアップ済モデルを同梱 ※2019年7月9日更新：デスクトップモードでしゃがんだ時にズボンが突き抜ける問題を修正 VRchat用のモデルとなります。 ■BOOST用内容">
+    "Reprint is prohibited（他サイトへの転載はおやめください） このアバターはHimiko Avatar Worldにて試着可能です。 ※2019年3月27日更新：blenderで編集するときにシェイプキーが出なかった問題を解決しました ※2019年7月1日更新：BOOST版にquest対応・セットアップ済モデルを同梱 ※2019年7月9日更新：デスクトップモードでしゃがんだ時にズボンが突き抜ける問題を修正 ※2020年2月1日 フルトラッキングに対応 VRchat用のモデルとなります。 ■BOOST用内容">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/9585a184-fff0-488e-8a9d-612c758951c2/i/1290000/279eed6e-d981-4d3c-9f4f-15b9865b1a00_base_resized.jpg">
     <meta property="og:url" content=
@@ -179,9 +179,9 @@
                                     <a class=
                                     "btn add-cart full-length"
                                     title=
-                                    "やくそくヤギくん無料版2019_07_09.zip"
+                                    "やくそくヤギくん無料版2020_02_01_02.zip"
                                     href=
-                                    "https://booth.pm/downloadables/638392">
+                                    "https://booth.pm/downloadables/887318">
                                     <div class="u-d-block">
                                       <span class=
                                       "cmd-label">無料ダウンロード</span>
@@ -190,13 +190,13 @@
                                     "u-d-flex u-flex-wrap u-justify-content-center u-tpg-caption1 u-fw-normal">
                                       <div class=
                                       "u-text-ellipsis u-max-w-50">
-                                        やくそくヤギくん無料版2019_07_09
+                                        やくそくヤギくん無料版2020_02_01_02
                                       </div>
                                       <div>
                                         .zip
                                       </div>
                                       <div>
-                                        &nbsp;(228 KB)
+                                        &nbsp;(231 KB)
                                       </div>
                                     </div></a>
                                   </div>
@@ -348,6 +348,7 @@
                             ※2019年3月27日更新：blenderで編集するときにシェイプキーが出なかった問題を解決しました
                             ※2019年7月1日更新：BOOST版にquest対応・セットアップ済モデルを同梱
                             ※2019年7月9日更新：デスクトップモードでしゃがんだ時にズボンが突き抜ける問題を修正
+                            ※2020年2月1日 フルトラッキングに対応
                             VRchat用のモデルとなります。 ■BOOST用内容
                             ・Materialセットアップ済のモデル（初期表情笑い版・初期表情通常版・眉毛が手前に出る設定有り版・カラーバリエーション２色）
                             ・オキュラスクエスト向けセットアップ済unityPackag
@@ -357,7 +358,7 @@
                             ■無償版内容 ・FBXファイル ・Textureファイル
                             ※アウトラインマスクとシャドウマスク込み
                             通常のVRchatアバターアップロード手順でアップロードしてください。
-                            無償版のモデルはクエストではmedium判定となります。 ■やっていい事
+                            無償版のモデルはクエストではpoor判定となります。 ■やっていい事
                             ・VRchatでの使用 ・VRchatを使用した生放送の出演・撮影など ・改変
                             ■禁止事項 ・モデル再配布（改造・未改造問わず）
                             ※アバターペデスタルへの使用も再配布にあたります ・政治的利用
@@ -366,8 +367,8 @@
                             ・その他製作者が不適切と判断したもの
                             ※上記以外の使用については作者にお問い合わせください。
                             ※このモデルには、@reflex_1124　様作　Reflex Shader
-                            2.0.1
-                            （配布先：https://booth.pm/ja/items/1088971　）が利用されています。
+                            （配布先：
+                            https://booth.pm/ja/items/1088971　）が利用されています。
                           </p>
                         </div>
                       </section>
