updated at: 2020-02-02 03:00, あっと式オリジナル３Dアバター『量産型仮面天使アンジェ』 - あっとまーく人形館 - BOOTH

--- a/VRChat/45/1177645.html
+++ b/VRChat/45/1177645.html
@@ -80,7 +80,7 @@
         <div class="market-item-detail u-bg-white"
         data-product-brand="minnakinoko" data-product-category=
         "127" data-product-id="1177645" data-product-list=
-        "market_show" data-product-price="0" data-tracking=
+        "market_show" data-product-price="1980" data-tracking=
         "detail_item">
           <nav>
             <div class="breadcrumbs u-border-b u-border-100">
@@ -181,32 +181,49 @@
                                   </div>
                                   <div class=
                                   "variation-price u-text-right">
-                                    ¥ 0
+                                    ¥ 1,980
                                   </div>
                                 </div>
                                 <div class="variation-cart">
                                   <div class="cart-button-wrap">
-                                    <a class=
-                                    "btn add-cart full-length"
-                                    title="type_ange.zip" href=
-                                    "https://booth.pm/downloadables/478808">
-                                    <div class="u-d-block">
-                                      <span class=
-                                      "cmd-label">無料ダウンロード</span>
-                                    </div>
-                                    <div class=
-                                    "u-d-flex u-flex-wrap u-justify-content-center u-tpg-caption1 u-fw-normal">
-                                      <div class=
-                                      "u-text-ellipsis u-max-w-50">
-                                        type_ange
+                                    <form class="button_to" method=
+                                    "post" action=
+                                    "https://minnakinoko.booth.pm/cart?added_to_cart=true&amp;via=market">
+                                      <input type="hidden" name=
+                                      "_method" value=
+                                      "patch"><button class=
+                                      "btn add-cart full-length"
+                                      data-product-id="1177645"
+                                      data-product-price="1980"
+                                      data-product-brand=
+                                      "minnakinoko"
+                                      data-product-category="127"
+                                      data-product-variant=
+                                      "1830834" data-tracking=
+                                      "add_item" data-product-list=
+                                      "from market_show via market to add_item"
+                                      type="submit"><input type=
+                                      "hidden" name=
+                                      "cart_item[variation_id]" id=
+                                      "cart_item_variation_id"
+                                      value="1830834"></button>
+                                      <div class="cmd-label">
+                                        <button class=
+                                        "btn add-cart full-length"
+                                        data-product-id="1177645"
+                                        data-product-price="1980"
+                                        data-product-brand=
+                                        "minnakinoko"
+                                        data-product-category="127"
+                                        data-product-variant=
+                                        "1830834" data-tracking=
+                                        "add_item"
+                                        data-product-list=
+                                        "from market_show via market to add_item"
+                                        type=
+                                        "submit">カートに入れる</button>
                                       </div>
-                                      <div>
-                                        .zip
-                                      </div>
-                                      <div>
-                                        &nbsp;(631 KB)
-                                      </div>
-                                    </div></a>
+                                    </form>
                                   </div>
                                 </div>
                               </div>
